syntax = "proto3";

package user;
option go_package = "./proto/user";

service UserService {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
    rpc LoginUser(LoginUserRequest) returns (UserResponse);
    rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
    rpc UpdateUser(UpdateUserRequest) returns (GetUserByIdResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
    string id = 1;
    string username = 2;
    string password = 3;
}

message UserResponse {
    string id = 1;
    string username = 2;
    string token = 3;
}

message RegisterUserRequest {
    string username = 1;
    string password = 2;
}

message RegisterUserResponse {
    string id = 1;
}

message LoginUserRequest {
    string username = 1;
    string password = 2;
}

message GetUserByIdRequest {
    string id = 1;
}

message GetUserByIdResponse {
    string id = 1;
    string username = 2;
}

message UpdateUserRequest {
    string id = 1;
    string password = 2;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    string message = 1;
}